yaml/manifest_nfs_server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfs-server
  namespace: $NAMESPACE
spec:
  replicas: 0
  selector:
    matchLabels:
      role: nfs-server
  template:
    metadata:
      labels:
        role: nfs-server
    spec:
      containers:
      - name: nfs-server
        image: gcr.io/google_containers/volume-nfs:latest
        ports:
          - name: nfs
            containerPort: 2049
          - name: mountd
            containerPort: 20048
          - name: rpcbind
            containerPort: 111
        securityContext:
          privileged: true
        volumeMounts:
          - name: nfs-pd-pvc
            mountPath: /exports
      volumes:
        - name: nfs-pd-pvc
          gcePersistentDisk:
            pdName: digi-config
            fsType: ext4
