yaml/manifest_cloudsql_proxy_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudsql-proxy
  namespace: $NAMESPACE
spec:
  type: ClusterIP
  ports:
    - name: sql
      port: 5432
      targetPort: 5432
  selector:
    app: cloudsql-proxy
  sessionAffinity: None
