yaml/manifest_keeper.yaml
apiVersion: v1
kind: Service
metadata:
  name: digi-keeper
  namespace: $NAMESPACE
  annotations:
    cloud.google.com/backend-config: '{"ports": {"digi-keeper":"digi-keeper-backendconfig"}}'
    cloud.google.com/app-protocols: '{"digi-keeper":"HTTPS"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
    - name: digi-keeper
      port: 8445
      targetPort: 8445
  selector:
    app: digi-keeper
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: digi-keeper
  name: digirunner-keeper
  namespace: $NAMESPACE
  annotations:
    iam.gke.io/gcp-service-account: $PROJECT_NUM-compute@developer.gserviceaccount.com
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: digi-keeper
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: digi-keeper
    spec:
      imagePullSecrets:
        - name: pull-images-secret
      containers:
      - args:
          - -Xms3g
          - -Xmx3g
          - -Dloader.path=lib/,libsext/
          - -Djava.security.debug=properties
          - -Djava.security.properties=./config/dgr.java.security
          - -Dspring.config.location=file:./config/
          - -DdigiRunner.token.key-store.path=./keys
          - -Djasypt.encryptor.privateKeyLocation=file:./keys/enc.pem
          - -Dfile.encoding=UTF-8
          - -Dlogging.config=file:./config/logback.xml
          - -Dserver.port=8442
          - -Dspring.profiles.active=local
          - org.springframework.boot.loader.launch.PropertiesLauncher
        command:
          - java
          - -cp
          - app-cp/*
        workingDir: /opt/dgr-v4
        image: $IMAGE_DIGIRUNNER_APP
        imagePullPolicy: Always
        name: digirunner-keeper
        ports:
        - containerPort: 8445
          protocol: TCP
        - containerPort: 8442
          protocol: TCP
        resources:
          limits:
            cpu: 900m
            memory: 3584Mi
          requests:
            cpu: 100m
            memory: 200Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: config-volume
          mountPath: /opt/dgr-v4/config/
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: config-volume
        configMap:
          name: properties-mounts
