yaml/manifest_nfs_server_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nfs-server
  namespace: $NAMESPACE
spec:
  ports:
    - name: nfs
      port: 2049
    - name: mountd
      port: 20048
    - name: rpcbind
      port: 111
  selector:
    role: nfs-server
  sessionAffinity: None
